# EZ-Smart-assistant

./: .env_example  .gitignore  ARCHITECTURE_EXPLANATION.md  QUICK_START.md  README.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  streamlit_app.py
src/: models.py  prompts.py  workflow.py
